    - Now the cursor actually uses the !cursor_palette (before it used !letter_palette).
    - Allow for ObjecTool custom normal objects $42-$4F along with $52-$FF, since they're never used for the custom midways (thanks to MarioFanGamer for suggesting this).
    - Added new cursor options (static, blinking, oscillating).

v0.2.7:
    - Fixed an issue where sprites would disappear when the Retry prompt was active, in case the end of the OAM table was filled (thanks to LouisDoucet for reporting this).
    - Changed ordering on this document to list more recent versions before older ones.

v0.2.6:
    - Changed !lose_lives define to a table to enable/disable infinite lives on a sublevel basis.
    - Fixed issue where sometimes Mario would die or have weird interactions on the first frame after respawning in a layer 2 level (thanks to FYRE150 for reporting this).
    - Finished "extra.asm" routines documentation.

v0.2.5:
    - Added more support for ObjecTool, by only reserving Custom Normal Objects 00-51 for the custom midway bar, allowing to use Custom Normal Objects 52-FF in ObjecTool normally.
    - Added ObjecTool readme.

v0.2.4:
    - Fixed issue that would prevent the Game Over music from playing when running out of lives (with !lose_lives = 1) and play the death SFX during the Game Over screen (thanks to simon.caio for reporting this).
    - Fixed game crash when using the VWF Dialogues patch, due to Retry overwriting the SRAM size even when it was set to a larger size by an external resource (thanks to simon.caio for reporting this).
    - Made some space and cycle optimizations to the NMI routine.

v0.2.3:
    - Fixed issue with ROMs where Lunar Magic v3.0+ was used but the routine at $03BCDC wasn't installed (thanks to SJandCharlieTheCat for reporting this).
    - Change get_screen_number macro to a subroutine and made it check for LM3's $03BCDC routine installation at runtime, for more robustness.